# vault-ui-refactor

./: ARCHITECTURE.md  README.md  eslint.config.js  gui_config.json  package-lock.json  package.json  tasks.json
.github/workflows/: ci.yml  release.yml
scripts/: excel_sync.py  任務-新增情報表.py  劇本-匯出Excel.py  劇本-同步Excel.py  劇本-生成關鍵字Excel.py  屬性-修補系統.py  屬性-檢查使用.py  屬性-清理未用.py  戰鬥-修補CP_JP獎勵.py  戰鬥-修補平衡重構.py  戰鬥-傷害計算表-v2.py  戰鬥-傷害計算表.py  技能-修補OTB速度.py  技能-修補分隔線.py  技能-修補動畫.py  技能-修補增幅標籤.py  技能-修補學習標籤.py  技能-修補學習系統.py  技能-修補容器.py  技能-修補描述與圖標.py  技能-修補擴充.py  技能-修補系統.py  技能-修補與職業聯動.py  技能-修補防禦.py  技能-修補防禦容器.py  技能-修補防禦習得-修正.py  技能-修補防禦習得.py  技能-修補類型與琴功.py  技能-匯入習得.py  技能-生成階層表.py  插件-提取文檔.py  插件-語法參考.py  敵人-修補Boss標記.py  敵人-修補標籤.py  敵人-修補等級.py  敵人-修補能力值.py  敵人-修補資料-補充.py  敵人-修補資料.py  敵人-生成資料.py  敵群-修補編組.py  (+20 more)
src/: DamageCalculator.tsx  FormBuilder.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: diagnostics.rs  logger.rs  main.rs  manifest.rs  model.rs  runner.rs
src/app/: AppShell.tsx
src/core/: tauri.ts
src/domain/: script.ts  task.ts
src/features/damage/: DamagePanel.tsx
src/features/tasks/: TaskPanel.tsx
src/ipc/: diagnostics.ts  events.ts
src/shared/utils/: path.test.ts  path.ts
templates/md/: 章節匯入範例.md
